--- a/wiki/DiagramasDeCasosDeUso.wiki
+++ b/wiki/DiagramasDeCasosDeUso.wiki
@@ -1,3 +1,10 @@
 ||<a href="http://code.google.com/p/mercadonline">Home</a>||<a href="http://code.google.com/p/mercadonline/wiki/DescricaoDoProjeto">Descrição Do Sistema</a>||<a href="http://code.google.com/p/mercadonline/wiki/Requisitos">Requisitos</a>||<a href="http://code.google.com/p/mercadonline/wiki/CasosDeUso">Casos de Uso</a>||<a href="http://code.google.com/p/mercadonline/wiki/DiagramasDeCasosDeUso">Diagramas</a>||<a href="http://code.google.com/p/mercadonline/wiki/ModeloDeEntidadeRelacional">Modelo de Entidade Relacional</a>||<a href="http://code.google.com/p/mercadonline/wiki/Desenvolvedores">Desenvolvedores</a>||<a href="http://code.google.com/p/mercadonline/wiki/Bibliografia">Bibliografia</a>||||<a href="http://code.google.com/p/mercadonline/wiki/video">Vídeos</a>||
 
-Em Breve!!!
+<h2><b><FONT FACE="TIMES" SIZE="5"><p align="center">Diagramas De Casos De Uso</p></font></b></h2><br>
+<hr>
+
+<h2><b><p align="center">Diagramas De Casos De Uso Mercadonline</p></b></h2><br>
+
+<p align="center"><img src="https://lh5.googleusercontent.com/-NrhV0R7ebco/URJCntNIQsI/AAAAAAAAANI/P2Rs2U8Aim4/s640/Diagrama%2520de%2520casos%2520de%2520uso.JPG"><br>
+<br>
+<hr>
