--- a/wiki/Desenvolvedores.wiki
+++ b/wiki/Desenvolvedores.wiki
@@ -3,11 +3,11 @@
 <H2 TEXT-ALIGN='CENTER'><b><FONT FACE="TIMES" SIZE="1"><p align="center">Desenvolvedores</p></font></b></H2>
 <hr>
 
-Carlos César Bezerra Fonseca (????)cc_bf@hotmail.com ;<br>
+Carlos César Bezerra Fonseca (--)cc_bf@hotmail.com ;<br>
 Cybele Félix Amorim Veríssimo (??????)cybeleamorissimo@yahoo.com.br;<br>
-Geraldo Gomes da Cruz Júnior (??????) <a href="geraldoj8@gmail.com">geraldoj8@gmail.com</a> ;<br> 
-Larissa Karollyne de Melo Ferreira (??????)larissakarollyne@gmail.com ;<br>
-Mário Gomes de Melo (???????)infoninja@hotmail.com .<br>
-Wendislau Silva (????)????@gmail.com;<br>
+Geraldo Gomes da Cruz Júnior (--) <a href="geraldoj8@gmail.com">geraldoj8@gmail.com</a> ;<br> 
+Larissa Karollyne de Melo Ferreira (--)larissakarollyne@gmail.com ;<br>
+Mário Gomes de Melo (--)infoninja@hotmail.com .<br>
+Wendislau Victor Santos da Silva (--)wendislau_victor@hotmail.com;<br>
 <br>
 <hr>
