Edited wiki page Desenvolvedores through web user interface.

--- a/wiki/Desenvolvedores.wiki
+++ b/wiki/Desenvolvedores.wiki
@@ -4,7 +4,7 @@
 <hr>
 
 Carlos César Bezerra Fonseca (--)cc_bf@hotmail.com ;<br>
-Cybele Félix Amorim Veríssimo (??????)cybeleamorissimo@yahoo.com.br;<br>
+Cybele Félix Amorim Veríssimo (--)cybeleamorissimo@yahoo.com.br;<br>
 Geraldo Gomes da Cruz Júnior (--) <a href="geraldoj8@gmail.com">geraldoj8@gmail.com</a> ;<br> 
 Larissa Karollyne de Melo Ferreira (--)larissakarollyne@gmail.com ;<br>
 Mário Gomes de Melo (--)infoninja@hotmail.com .<br>
