--- a/wiki/Diagramas.wiki
+++ b/wiki/Diagramas.wiki
@@ -5,17 +5,17 @@
 
 <h2><b><p align="center">Diagrama De Casos De Uso Mercadonline</p></b></h2><br>
 
-<p align="center"><img src="https://docs.google.com/file/d/0B5hIXVRKD54qTnptUjZKX1pKSms/edit?usp=sharing"><br>
+<p align="center"><img src="https://lh3.googleusercontent.com/-KLou6G9QZR4/USF-VN5paGI/AAAAAAAAAOg/Z3ZFqIIlc14/s800/DiagramaCasoUsoMercadon_UCD_17022013.jpg"><br>
 <hr>
 
 <h2><b><p align="center">Diagrama De Classe Mercadonline</p></b></h2><br>
 
-<p align="center"><img src="https://docs.google.com/file/d/0B5hIXVRKD54qWV9UbHUwaEVROFU/edit?usp=sharing"><br>
+<p align="center"><img src="https://lh4.googleusercontent.com/-fBF7CphfZAI/USF-XPH-unI/AAAAAAAAAOo/SXfoUqaDqt4/s800/DiagramaClasseMercadon_CD_17022013.jpg"><br>
 <hr>
 
 <h2><b><p align="center">Diagrama De Pacotes</p></b></h2><br>
 
-<p align="center"><img src="https://docs.google.com/file/d/0B5hIXVRKD54qRHg4RWRoNlhZUDA/edit?usp=sharing"><br>
+<p align="center"><img src="https://lh6.googleusercontent.com/-QVzKSYUZcgQ/USF-XfTvhfI/AAAAAAAAAOs/1qGnv19oz4c/s800/DiagramaPacoteMercadon_PKGD_17022013.jpg"><br>
 <hr>
 
 
